--- a/data/index.html
+++ b/data/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h2>data</h2>
+<h2>Directory Listing</h2>
 <p>
     <li><a href="Averages.xls">Averages.xls</a></li>
     <li><a href="DOData.csv">DOData.csv</a></li>
