--- a/data/index.html
+++ b/data/index.html
@@ -20,6 +20,7 @@
     <li><a href="WQTesting.xlsx">WQTesting.xlsx</a></li>
     <li><a href="Weather.csv">Weather.csv</a></li>
     <li><a href="WineQuality.csv">WineQuality.csv</a></li>
+    <li><a href="WQ_FAT.xlsx">WQ_FAT.xlsx</a></li>
 </p>
 </body>
 </html>
