--- a/data/index.html
+++ b/data/index.html
@@ -21,6 +21,7 @@
     <li><a href="Weather.csv">Weather.csv</a></li>
     <li><a href="WineQuality.csv">WineQuality.csv</a></li>
     <li><a href="WQ_FAT.xlsx">WQ_FAT.xlsx</a></li>
+    <li><a href="MonthlyAverages_FAT.xlsx">MonthlyAverages_FAT.xlsx</a></li>
 </p>
 </body>
 </html>
