--- a/data/index.html
+++ b/data/index.html
@@ -1,7 +1,7 @@
 ---
 title: Index of files
 --- 
- {% assign doclist = site.pages | sort: 'url'  %}
+ {% assign doclist = data | sort: 'url'  %}
     <ul>
        {% for doc in doclist %}
             {% if doc.name contains '.md' or doc.name contains '.html' %}
