changes to index.html of data

--- a/data/index.html
+++ b/data/index.html
@@ -1,10 +1,10 @@
 ---
 title: Index of files
 --- 
- {% assign doclist = data | sort: 'url'  %}
+ {% assign doclist = site.pages | sort: 'url'  %}
     <ul>
        {% for doc in doclist %}
-            {% if doc.name contains '.md' or doc.name contains '.html' %}
+            {% if doc.name contains '.ipynb' %}
                 <li><a href="{{ site.baseurl }}{{ doc.url }}">{{ doc.url }}</a></li>
             {% endif %}
         {% endfor %}
