--- a/MAT6012_Notebooks/FallSem22_23/index.html
+++ b/MAT6012_Notebooks/FallSem22_23/index.html
@@ -2,26 +2,26 @@
 <body>
 <h2>Directory Listing of FallSemm22_23_Lab</h2>
 <p>
-<br><br><a href='./FallSem22_23_Lab#01.ipynb'>FallSem22_23_Lab#01.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#02.ipynb'>FallSem22_23_Lab#02.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#03.ipynb'>FallSem22_23_Lab#03.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#04.ipynb'>FallSem22_23_Lab#04.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#05.ipynb'>FallSem22_23_Lab#05.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#06.ipynb'>FallSem22_23_Lab#06.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#06_2.ipynb'>FallSem22_23_Lab#06_2.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#07.ipynb'>FallSem22_23_Lab#07.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#08.ipynb'>FallSem22_23_Lab#08.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#09.ipynb'>FallSem22_23_Lab#09.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#09_2.ipynb'>FallSem22_23_Lab#09_2.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#10.ipynb'>FallSem22_23_Lab#10.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#11.ipynb'>FallSem22_23_Lab#11.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#12.ipynb'>FallSem22_23_Lab#12.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#12_2.ipynb'>FallSem22_23_Lab#12_2.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#13.ipynb'>FallSem22_23_Lab#13.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#14.ipynb'>FallSem22_23_Lab#14.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#15.ipynb'>FallSem22_23_Lab#15.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#15_Repition.ipynb'>FallSem22_23_Lab#15_Repition.ipynb</a><br /><br />
-<a href='./FallSem22_23_Lab#16.ipynb'>FallSem22_23_Lab#16.ipynb</a><br /><br /> 
+<br><br><a href='./FallSem22_23_Lab_01.ipynb'>FallSem22_23_Lab_01.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_02.ipynb'>FallSem22_23_Lab_02.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_03.ipynb'>FallSem22_23_Lab_03.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_04.ipynb'>FallSem22_23_Lab_04.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_05.ipynb'>FallSem22_23_Lab_05.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_06.ipynb'>FallSem22_23_Lab_06.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_06_2.ipynb'>FallSem22_23_Lab_06_2.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_07.ipynb'>FallSem22_23_Lab_07.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_08.ipynb'>FallSem22_23_Lab_08.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_09.ipynb'>FallSem22_23_Lab_09.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_09_2.ipynb'>FallSem22_23_Lab_09_2.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_10.ipynb'>FallSem22_23_Lab_10.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_11.ipynb'>FallSem22_23_Lab_11.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_12.ipynb'>FallSem22_23_Lab_12.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_12_2.ipynb'>FallSem22_23_Lab_12_2.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_13.ipynb'>FallSem22_23_Lab_13.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_14.ipynb'>FallSem22_23_Lab_14.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_15.ipynb'>FallSem22_23_Lab_15.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_15_Repition.ipynb'>FallSem22_23_Lab_15_Repition.ipynb</a><br /><br />
+<a href='./FallSem22_23_Lab_16.ipynb'>FallSem22_23_Lab_16.ipynb</a><br /><br /> 
 </p>
 </body>
 </html>
